@@ -95,6 +95,7 @@ class Command(Enum):
     RESET_PRINTER = "RESET_PRINTER"
 
     START_URL_DOWNLOAD = "START_URL_DOWNLOAD"
+    START_CONNECT_DOWNLOAD = "START_CONNECT_DOWNLOAD"
     SEND_TRANSFER_INFO = "SEND_TRANSFER_INFO"
     STOP_TRANSFER = "STOP_TRANSFER"
 
