@@ -12,6 +12,7 @@ ChangeLog
     * Changed DOWNLOAD constants to TRANSFER
     * Download object replaced by Transfer object
     * Refactor of Transfer object, added reset method
+    * Implementation of START_URL_DOWNLOAD and START_CONNECT_DOWNLOAD commands
 
 0.5.0
     * FILE_CHANGED event sends free_space
